--- a/src/style/Common/header.module.scss
+++ b/src/style/Common/header.module.scss
@@ -1,7 +1,6 @@
 .header {
-  color: #080599;
   font-family: Arial, sans-serif;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .topBar {
@@ -47,7 +46,7 @@
 .navBar {
   display: flex;
   justify-content: space-between;
-  background: #0052cc;
+  background: #338aee;
   padding: 10px 20px;
 }
 
