--- a/src/style/Common/header.module.scss
+++ b/src/style/Common/header.module.scss
@@ -1,6 +1,7 @@
 .header {
   font-family: Arial, sans-serif;
   margin-bottom: 20px;
+  text-decoration: solid;
 }
 
 .topBar {
@@ -8,6 +9,7 @@
   justify-content: space-between;
   padding: 10px 20px;
   align-items: center;
+  padding: 20px 10%;
 }
 
 .logo {
@@ -46,8 +48,8 @@
 .navBar {
   display: flex;
   justify-content: space-between;
-  background: #338aee;
-  padding: 10px 20px;
+  background: #0070F4;
+  padding: 10px 10%;
 }
 
 .menu {
