--- a/src/style/Common/header.module.css
+++ b/src/style/Common/header.module.css
@@ -96,3 +96,35 @@
     }
   }
 }
+
+.menuItem {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdownContent {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: white;
+  border: 1px solid #ddd;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  min-width: 150px;
+}
+
+.dropdownContent button {
+  background: none;
+  border: none;
+  width: 100%;
+  text-align: left;
+  padding: 10px;
+  cursor: pointer;
+  color: black;
+}
+
+.dropdownContent button:hover {
+  background-color: #f2f2f2;
+}
