--- a/src/pages/Manage/MenuPage.css
+++ b/src/pages/Manage/MenuPage.css
@@ -1,26 +1,22 @@
-/* Style chung cho các button trên header danh sách */
 .button-up-of-list .ant-btn {
-    background-color: #00B63E !important; /* Màu nền */
-    color: #FFF !important;              /* Màu chữ */
-    font-weight: 600;
-    border: 1px solid transparent !important; /* Xóa viền mặc định */
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    padding: 4px 12px; /* Tùy chỉnh padding nếu cần */
-    border-radius: 6px; /* Bo góc nhẹ */
-  }
-  
-  /* Hover */
-  .button-up-of-list .ant-btn:hover {
-    background-color: #009632 !important; /* Màu nền khi hover */
-    border-color: #009632 !important;    /* Màu viền khi hover */
-    color: #FFF !important;              /* Màu chữ khi hover */
-  }
-  
-  /* Icon căn chỉnh đẹp với chữ */
-  .icon-of-menu-list-button {
-    margin-right: 4px;
-    font-size: 16px;
-  }
-  
+  background-color: #00B63E !important;
+  color: #FFF !important;
+  font-weight: 600;
+  border: 1px solid transparent !important;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 4px 12px;
+  border-radius: 6px;
+}
+
+.button-up-of-list .ant-btn:hover {
+  background-color: #009632 !important;
+  border-color: #009632 !important;
+  color: #FFF !important;
+}
+
+.icon-of-menu-list-button {
+  margin-right: 4px;
+  font-size: 16px;
+}
