Update Login and VerifyAccount
Saving LocalStorage

--- a/src/styles/LoginPage/css/main.module.css
+++ b/src/styles/LoginPage/css/main.module.css
@@ -27,7 +27,7 @@
 
 .loginForm {
   width: 70%;
-  background-color: rgb(116, 202, 231);
+  background-color: rgb(255 235 205);
   border: 2px;
   border-radius: 5%;
   padding: 20px;
