Update Pos Site

--- a/src/styles/LoginPage/css/main.module.css
+++ b/src/styles/LoginPage/css/main.module.css
@@ -22,7 +22,7 @@
   align-items: center;
   flex-direction: column;
   padding: 40px;
-  background-color: lightgrey;
+  background-color: #ffeac7;
 }
 
 .loginForm {
